Fixed two bugs regarding animated content and transforms.

1) Flattening a layer w/ transform content will now properly render out all keyframes
with proper transform (no more blanks).
2) Transform masks will always render properly on animated layers when there
are no keyframes on the transform mask, but there is content on the transformed layer.
There were certain circumstances where no projection update was applied at all, which
was not intended.

BUG:435599
BUG:435296